--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
@@ -18,8 +18,8 @@
   </head>
 
   <body class="page">
-    <header class="header decorated-zone angle">
-      <div class="design__element" aria-hidden="true">rec</div>
+    <header class="header decorated-zone">
+      <span class="design__element" aria-hidden="true">rec</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -39,40 +39,40 @@
           </li>
         </ul>
       </nav>
-      <h1 class="main__title">
+      <h1 class="main-title">
         no focus
       </h1>
-      <h2 class="title title__header title-decor">
+      <h2 class="title header__subtitle title-decor">
         Что делать, когда не можешь делать ничего <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </h2>
     </header>
 
-    <main class="main decorated-zone">
-      <section class="content__section">
-        <h2 class="title title__section">
+    <main class="main">
+      <section class="main__content-section main__content-section_columns">
+        <h2 class="title main__content-section_title">
           Почему сосредоточиться так сложно
         </h2>
-        <ul class="cards__list">
+        <ul class="main__content-section_cards-list">
           <li class="cards__list-item">
             <article class="card">
-              <h3 class="title title__card title-decor">
+              <h3 class="card__title title title-decor">
                 Многозадачность
               </h3>
-              <p class="text__card">
+              <p class="card__text">
                 Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
                 Исследователи
-                <a class="link__card" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько
+                <a class="card__link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько
                 важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
               </p>
             </article>
           </li>
           <li class="cards__list-item">
             <article class="card">
-              <h3 class="title title__card title-decor">
+              <h3 class="card__title title title-decor">
                 Дофамин
               </h3>
-              <p class="text__card">
+              <p class="card__text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он?
                 Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше
                 отвлекаешься, тем больше удовольствия получаешь.
@@ -82,17 +82,17 @@
         </ul>
       </section>
 
-      <section class="content__section">
-        <h2 class="title title__section">
+      <section class="main__content-section main__content-section_rows">
+        <h2 class="title main__content-section_title">
           Что снижает концентрацию внимания?
         </h2>
-        <ul class="cards__list card__list-row">
+        <ul class="main__content-section_cards-list main__content-section_cards-list_row">
           <li class="cards__list-item">
             <article class="card">
-              <h3 class="title title__card title-decor">
+              <h3 class="card__title title title-decor">
                 Многозадачность
               </h3>
-              <p class="text__card">
+              <p class="card__text">
                 Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости
                 вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
               </p>
@@ -100,10 +100,10 @@
           </li>
           <li class="cards__list-item">
             <article class="card">
-              <h3 class="title title__card title-decor">
+              <h3 class="card__title title title-decor">
                 Еда
               </h3>
-              <p class="text__card">
+              <p class="card__text">
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»:
                 как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
               </p>
@@ -111,10 +111,10 @@
           </li>
           <li class="cards__list-item">
             <article class="card">
-              <h3 class="title title__card title-decor">
+              <h3 class="card__title title title-decor">
                 Гаджеты
               </h3>
-              <p class="text__card">
+              <p class="card__text">
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не
                 может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
               </p>
@@ -123,103 +123,103 @@
         </ul>
       </section>
 
-      <section class="content__section">
-        <h2 class="title title__section">
+      <section class="main__content-section main__content-section_columns">
+        <h2 class="title main__content-section_title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-        <ul class="cards__list">
-          <li class="cards__list-item">
-            <h3 class="title subtitle__section title-decor">
-              5 простых (на самом деле не очень) советов
-            </h3>
-          </li>
-          <li class="cards__list-item">
-            <article class="card">
-              <h4 class="title subtitle__card title-decor">
-                Представьте небо и облака
-              </h4>
-              <p class="text__card">
-                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
-                представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
-                волноваться о потенциальных проблемах из будущего.
-              </p>
-            </article>
-          </li>
-          <li class="cards__list-item">
-            <article class="card">
-              <h4 class="title subtitle__card title-decor">
-                Включите музыку
-              </h4>
-              <p class="text__card">
-                Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
-                «белым шумом» или нейромузыкой.
-              </p>
-            </article>
-          </li>
-          <li class="cards__list-item">
-            <article class="card">
-              <h4 class="title subtitle__card title-decor">
-                Прогуляйтесь
-              </h4>
-              <p class="text__card">
-                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a class="link__card" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских
-                пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный
-                вариант.
-              </p>
-            </article>
-          </li>
-          <li class="cards__list-item">
-            <article class="card">
-              <h4 class="title subtitle__card title-decor">
-                Хорошо ешьте
-              </h4>
-              <p class="text__card">
-                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
-                хлеб из цельнозерновой пшеницы.
-              </p>
-            </article>
-          </li>
-          <li class="cards__list-item">
-            <article class="card">
-              <h4 class="title subtitle__card title-decor">
-                Читайте
-              </h4>
-              <p class="text__card">
-                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
-                направленное внимание.
-              </p>
-            </article>
-          </li>
-        </ul>
+        <div class="main__content-section_column-container">
+          <h3 class="title main__content-section_subtitle title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="main__content-section_cards-list">
+            <li class="cards__list-item">
+              <article class="card">
+                <h4 class="card__subtitle title title-decor">
+                  Представьте небо и облака
+                </h4>
+                <p class="card__text">
+                  Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
+                  представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
+                  волноваться о потенциальных проблемах из будущего.
+                </p>
+              </article>
+            </li>
+            <li class="cards__list-item">
+              <article class="card">
+                <h4 class="card__subtitle title title-decor">
+                  Включите музыку
+                </h4>
+                <p class="card__text">
+                  Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
+                  «белым шумом» или нейромузыкой.
+                </p>
+              </article>
+            </li>
+            <li class="cards__list-item">
+              <article class="card">
+                <h4 class="card__subtitle title title-decor">
+                  Прогуляйтесь
+                </h4>
+                <p class="card__text">
+                  Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                  <a class="card__link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских
+                  пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                  вариант.
+                </p>
+              </article>
+            </li>
+            <li class="cards__list-item">
+              <article class="card">
+                <h4 class="card__subtitle title title-decor">
+                  Хорошо ешьте
+                </h4>
+                <p class="card__text">
+                  Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
+                  хлеб из цельнозерновой пшеницы.
+                </p>
+              </article>
+            </li>
+            <li class="cards__list-item">
+              <article class="card">
+                <h4 class="card__subtitle title title-decor">
+                  Читайте
+                </h4>
+                <p class="card__text">
+                  Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
+                  направленное внимание.
+                </p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="content__section">
-        <h2 class="title subtitle__section title-decor">
+      <section class="main__gallery-section">
+        <h2 class="section__subtitle title title-decor">
           А можно в картинках?
         </h2>
-        <article class="gallery">
-          <picture class="gallery__item gallery__item-1">
+        <div class="gallery">
+          <div class="gallery_item">
             <img class="image_gallery" src="./images/sunset.png" alt="закат" loading="lazy" />
-          </picture>
-          <picture class="gallery__item gallery__item-2">
+          </div>
+          <div class="gallery_item">
             <img class="image_gallery" src="./images/ice-cream.png" alt="мороженное" loading="lazy" />
-          </picture>
-          <picture class="gallery__item gallery__item-3">
+          </div>
+          <div class="gallery_item">
             <img class="image_gallery" src="./images/tape.png" alt="касета" loading="lazy" />
-          </picture>
-          <picture class="gallery__item gallery__item-4">
+          </div>
+          <div class="gallery_item">
             <img class="image_gallery" src="./images/books.png" alt="книги" loading="lazy" />
-          </picture>
-          <picture class="gallery__item gallery__item-5">
+          </div>
+          <div class="gallery_item">
             <img class="image_gallery" src="./images/street.png" alt="улица" loading="lazy" />
-          </picture>
-        </article>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer class="footer decorated-zone angle">
-      <h2 class="main__title">
+    <footer class="footer decorated-zone">
+      <h2 class="main-title">
         focus
       </h2>
     </footer>
